<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:text="@string/add_debt"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarOnAddPage"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="#fff"
        app:subtitleTextColor="#fff"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="48dp"
        android:autofillHints="@string/debtor_name"
        android:ems="10"
        android:hint="@string/debtor_name"
        android:inputType="textPersonName"
        android:layout_below="@id/toolbarOnAddPage" />

    <EditText
        android:id="@+id/input_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/debtor_sum"
        android:ems="10"
        android:hint="@string/debtor_sum"
        android:inputType="number"
        android:layout_below="@id/input_name" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/debtor_email"
        android:ems="10"
        android:hint="@string/debtor_email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/input_sum" />

    <EditText
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/debtor_date"
        android:ems="10"
        android:hint="@string/debtor_date"
        android:inputType="date"
        android:layout_below="@id/input_email" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/add"
        android:textSize="18sp"
        android:layout_below="@id/input_date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@id/add"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="12dp"
        android:minHeight="70dp"
        android:gravity="center">

        <Button
            android:id="@+id/send_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minHeight="70dp"
            android:maxWidth="190dp"
            android:text="@string/send_email"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp">

            <Switch
                android:id="@+id/if_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"/>

            <TextView
                android:id="@+id/if_anonymous_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_anon"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>