...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.8"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RelativeLayout
...
            android:text="@string/total_text"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/total_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_sum"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/total_text"
...
